[package]
name = "mr_geolocation_thailand"
version = "0.1.0"
edition = "2024"
license = "MIT"
categories = ["development-tools"]
repository = "https://github.com/supaatwi/mr_geolocation_thailand"
documentation = "https://github.com/supaatwi/mr_geolocation_thailand/blob/main/README.md"
authors = ["Supaat Wisessued <supaat.wi@gmail.com>"]
keywords = ["mr_geolocation_thailand", "tool"]


[dependencies]
csv = "1.3.1"
kd-tree = "0.6"
typenum = "1.17.0"
geohash = "0.13.1"
tokio = { version = "1.44.2", features = ["full"] }
