[package]
name = "mr_geo_thai"
version = "0.2.0"
edition = "2024"
license = "MIT"
categories = ["development-tools"]
description = "Tool find geolocation in thailand"
repository = "https://github.com/supaatwi/mr_geo_thai"
documentation = "https://github.com/supaatwi/mr_geo_thai/blob/main/README.md"
authors = ["Supaat Wisessued <supaat.wi@gmail.com>"]
keywords = ["mr_geo_thai", "tool"]


[dependencies]
csv = "1.3.1"
kd-tree = "0.6"
typenum = "1.17.0"
geohash = "0.13.1"
